Added changes for Locatanle points and tests.